<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.bogda</groupId>
        <artifactId>translationBE</artifactId>
        <version>0.0.2</version>
    </parent>

    <groupId>com.bogda.repository</groupId>
    <artifactId>BogdaRepository</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Source: https://mvnrepository.com/artifact/com.azure/azure-cosmos -->
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-cosmos</artifactId>
            <version>4.76.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core</artifactId>
            <version>1.57.0</version>
        </dependency>

        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-storage-blob</artifactId>
            <version>12.29.0</version>
        </dependency>

        <!-- MyBatis-Plus Core -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-core</artifactId>
            <version>3.5.5</version>
        </dependency>

        <!-- MyBatis-Plus Extension -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-extension</artifactId>
            <version>3.5.5</version>
        </dependency>

        <!-- MyBatis -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.5.13</version>
        </dependency>

        <!-- MyBatis Spring Integration (for @MapperScan) -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>3.0.3</version>
        </dependency>

        <!-- Spring JDBC (for DataSourceTransactionManager) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>

        <!-- Druid DataSource (for MybatisPlusConfig) -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.2.24</version>
        </dependency>

        <!-- SQL Server JDBC Driver (for MybatisPlusConfig) -->
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>12.8.1.jre11</version>
        </dependency>

        <!-- Spring Data Redis (for RedisIntegration using RedisTemplate) -->
        <!-- spring-context 已通过 spring-boot-starter-data-redis 传递 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <!-- Jedis 客户端（RedisConfig 使用 JedisConnectionFactory 和 JedisPoolConfig） -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>5.2.0</version>
        </dependency>

        <!-- 以下依赖已通过 BogdaCommon 传递，无需重复声明：
        - lombok
        - fastjson (代码中未使用)
        -->
        <dependency>
            <groupId>com.bogda.common</groupId>
            <artifactId>BogdaCommon</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
    </dependencies>

</project>